fixed overflow-y of line graph canvas

--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,7 @@ nav {
     top: 10vh;
     z-index: 1;
     width: 100%;
-    overflow-y: auto;
+    /*overflow-y: auto;*/
     background-color:#101010;
 }
 
@@ -33,11 +33,15 @@ nav {
 
 #canvas{
     width:90%;
-    height: 700px;
-    overflow-y: scroll;
+    height: 300px;
+    min-height: 100% !important;
+    margin-right: 20px;
+    display: block;
+    overflow-y: auto;
+    overflow-x: hidden;
 
-    /*margin-right: 20px;*/
 }
+
 
 g.tick {
     stroke: #9d9d9d;
@@ -161,6 +165,10 @@ rect.selection{
     height: 30vh;
     /*right: 1vw;*/
 }
+
+#track_zoom_reset{
+    font-size: 10px;
+}
 g.focus, g#track_focus1{
     /*fill: #9d9d9d;*/
     fill: steelblue;
@@ -184,7 +192,7 @@ g.focus > circle.chart_tooltip, g.focus-ref > circle.chart_tooltip-ref{
     fill: #9d9d9d;
 }
 #sel_speed{
-    width: 50%;
+    width: 30%;
     float: right;
 }
 .playBtn{
